--- a/Azure/index.html
+++ b/Azure/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
+<div class="all-section">
     <!-- Head section one -->
-<header class="header-one">
-    <div class="mobile">
+    <header class="header-one">
+        <div class="mobile">
     
             <div class="burger-nav-azure">
                 <div class="burger-nav">
@@ -44,6 +45,7 @@
             </div>
         </div>
     </header>
+
     <!-- Head section two -->
     <header class="header-two">
         <div class="mobile-two">
@@ -86,9 +88,8 @@
             </div>
         </div>
     </div>
-        <!-- . -->
     </header>
-
+ 
     <!-- Head section three -->
     <header class="header-three">
         <div class="mob-header-three">
@@ -135,6 +136,7 @@
             </div>
         </div>
     </div> 
+
  </header>
  <!-- Head section four -->
  <header class="header-four">
@@ -186,8 +188,39 @@
         </div>
     </div> 
  </header>
+ <main class="main-four">
+    <!-- <div class="img-top">
+        <img src="Asset/image/Desktop hero.avif" alt="">
+    </div> -->
+    <div class="top-head">
+        <div class="top-main">
+            <div class="heading-section">
+                <div class="first-head">
+                <h1>AZURE. INVENT WITH PURPOSE.</h1>
+            </div>
+            <div class="second-head">
+                <h1>Power your vision</h1>
+                <p>Optimize across workloads and environments and accomplish more with a comprehensive cloud platform. Get started now with pay-as-you-go pricing. There’s no upfront commitment—cancel anytime. Or try Azure free for up to 30 days.</p>
+            </div>
+            </div>
+        </div>
+        <div class="btn-head-section">
+            <a href="#" class="btn-blue">Get started</a>
+            <a href="#" class="btn-black">Try Azure for free</a>
+        </div>
+    </div>              
+</main>
+<section class="alert-msg">
+    <p><a href="#">Azure OpenAI Service is now available. Learn more  <i class="fa-solid fa-chevron-right"></i>  </a></p>
+</section>
 
-
+</div>
+<div class="container">
+    <div class="heading-grid">
+        <h2>On-premises, hybrid, multicloud, or at the edge—create secure, future-ready cloud solutions on Azure</h2>
+    </div>
+</div>
+</div>
     
 </body>
 </html>
