feat-modified-dicover

--- a/Azure/index.html
+++ b/Azure/index.html
@@ -492,6 +492,8 @@
             <div class="space"></div>
         </div>
     </div>
+    <!-- watch video container -->
+    <div class="watch-con"></div>
         
 
 
