--- a/Azure/index.html
+++ b/Azure/index.html
@@ -286,7 +286,7 @@
                 <li><a href="#">Compute</a></li>
                 <li><a href="#">Containers</a></li>
                 <li><a href="#">Hybrid + multicloud</a></li>
-                <li><a href="#">Internet of Things(loT)</a></li>
+                <li><a href="#">Internet of Things (loT)</a></li>
             </ul>
         </div>
 
@@ -544,6 +544,125 @@
             <div class="space-last"></div>
         </div>
     </div>
+    <!-- footer -->
+    <footer>
+        <div class="footer-nav">
+            <a href="#">
+                <span class="ftr-span">
+                    <img src="/Azure/Asset/image/azure-blue.svg" alt="" width="24px">
+                </span>
+                <span class="ftr-span">Get the Azure mobile app</span>
+            </a>
+            <ul>
+                <li><img src="/Azure/Asset/image/svgexport-6.svg" alt=""></li>
+                <li><img src="/Azure/Asset/image/svgexport-7.svg" alt=""></li>
+                <li><img src="/Azure/Asset/image/svgexport-8.svg" alt=""></li>
+            </ul>
+        </div>
+        
+        <div class="footer-row">
+            <div class="footer-column">
+                <h3>Explore Azure</h3>
+                <ul>
+                    <li><a href="#">What is Azure?</a></li>
+                    <li><a href="#">Get started</a></li>
+                    <li><a href="#">Global infrastructure</a></li>
+                    <li><a href="#">Datacentre regions</a></li>
+                    <li><a href="#">Trust your cloud</a></li>
+                    <li><a href="#">customer enablement</a></li>
+                    <li><a href="#">Customer stories</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Product and pricing</h3>
+                <ul>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Free Azure services</a></li>
+                    <li><a href="#">Flexible purchase options</a></li>
+                    <li><a href="#">Cloud economics</a></li>
+                    <li><a href="#">Optimise your costs</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Solutions and support</h3>
+                <ul>
+                    <li><a href="#">Solutions</a></li>
+                    <li><a href="#">Resource for accelerating growth</a></li>
+                    <li><a href="#">Solution architectures</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Azure demo and live Q&A</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Partners</h3>
+                <ul>
+                    <li><a href="#">Azure Marketplace</a></li>
+                    <li><a href="#">Find a partner</a></li>
+                    <li><a href="#">Technology partners</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Resources</h3>
+                <ul>
+                    <li><a href="#">TRaining and certifications</a></li>
+                    <li><a href="#">Documentation</a></li>
+                    <li><a href="#">Updates</a></li>
+                    <li><a href="#">Bog</a></li>
+                    <li><a href="#">Developers resources</a></li>
+                    <li><a href="#">Students</a></li>
+                    <li><a href="#">Events and webinars</a></li>
+                    <li><a href="#">Analyst repors, white papers and e-books</a></li>
+                    <li><a href="#">Videos</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Cloud computing</h3>
+                <ul>
+                    <li><a href="#">What is machine learning?</a></li>
+                    <li><a href="#">What is the cloud?</a></li>
+                    <li><a href="#">What is Big Data Analyst?</a></li>
+                    <li><a href="#">What is PaaS?</a></li>
+                    <li><a href="#">What is a container?</a></li>
+                    <li><a href="#">What is DEvOps?</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="footer-row-last">
+            <div class="language">
+                <label for="">Change language</label><br class="break-line">
+                <select name="" id="">
+                    <option value="">English (US)</option>
+                    <option value="">English (Australia)</option>
+                    <option value="">English (Canada)</option>
+                    <option value="">English (India)</option>
+                    <option value="">English (UK)</option>
+                    <option value="">Espanol</option>
+                    <option value="">Italiano</option>
+                </select>
+            </div>
+
+            <div class="footer-link">
+                <ul>
+                    <li><a href="">Diversity and inclusion</a></li>
+                    <li><a href="">Accessibility</a></li>
+                    <li><a href="">Privacy & Cookies</a></li>
+                    <li><a href="">Data Protection Notice</a></li>
+                    <li><a href="">Trademarks</a></li>
+                    <li><a href="">Terms of use</a></li>
+                    <li><a href="">Privacy Data Management</a></li>
+                    <li><a href="">Contacy us</a></li>
+                    <li><a href="">Feedback</a></li>
+                    <li><a href=""> Sitemap</a></li>
+                    <li><a class="bold" href="">© Microsoft 2023</a></li>
+                </ul>
+            </div>
+
+
+        </div>
+
+    </footer>
 
 
 
@@ -552,3 +671,4 @@
 </html>
 
 
+     
