feat: header in progress

--- a/Azure/index.html
+++ b/Azure/index.html
@@ -427,7 +427,6 @@
             </div>
         </div>
     </div>
-
     <!-- six-boxes -->
     <div class="containers">
         <div class="head-text">
@@ -684,13 +683,14 @@
             </div>
             <div class="fix-msg">
                 <div class="pop-up">
-                    <i class="fa-regular fa-comments"></i><h4>Chat with sales</h4>
-            </div>
+                    <i class="fa-regular fa-comments"></i>
+                    <h4>Chat with sales</h4>
                 </div>
+            </div>
         </footer>
-       
- 
-        </div>
+
+
+    </div>
     </div>
 
 
