feat-head section dooing

--- a/Airbnb/index.html
+++ b/Airbnb/index.html
@@ -77,27 +77,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="search-center-tab">
-                    <div class="multi-search-bar">
-                        <div class="text-one">
-                            <div>Anywhere</div>
-                        </div>
-                        <span class="line"></span>
-                        <div class="text-two">
-                            <div>Any week</div>
-                        </div>
-                        <span class="line"></span>
-                        <div class="text-last">
-                            <div>Add guests</div>
-                        </div>
-
-                        <div class="search-icon">
-                            <img src="/img/svgexport-10-1 (1).svg" alt="">
-                        </div>
-                    </div>
-                </div> -->
-                <!-- </div> -->
-
 
                 <div class="right-nav">
                     <div class="home-text">Airbnb your home</div>
@@ -116,7 +95,7 @@
                 </div>
             </header>
         </nav>
-        <!-- property list-->
+        <!-- icon img list-->
         <div class="category">
             <div class="category-list">
                 <div class="category-flex">
@@ -334,15 +313,43 @@
                         <div class="filter-container">
                             <div class="filter">
                                 <div class="img-text-filter">
-                                <img src="/img/svgexport-5.svg" alt="">
-                                <span>Filters</span>
+                                    <img src="/img/svgexport-5.svg" alt="">
+                                    <span>Filters</span>
+                                </div>
                             </div>
-                            </div>
-                           
+
                         </div>
                     </div>
                 </div>
 
+            </div>
+        </div>
+
+        <!-- img section -->
+        <div class="img-container">
+            <img src="" alt="" class="fav-icon">
+            <div class="img-store">
+                <div class="text-store">
+                    <h2>Gildeskal, Norway</h2> <span><img src="" alt=""> 4.92</span>
+                    <h3>36 hectares</h3>
+                    <h3>7-12 Dec</h3>
+                    <div class="price-store">
+                        <span>24,636 <h3>night</h3></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="img-container">
+            <img src="" alt="" class="fav-icon">
+            <div class="img-store">
+                <div class="text-store">
+                    <h2>Gildeskal, Norway</h2> <span><img src="" alt=""> 4.42</span>
+                    <h3>36 hectares</h3>
+                    <h3>7-12 Dec</h3>
+                    <div class="price-store">
+                        <span>24,636 <h3>night</h3></span>
+                    </div>
+                </div>
             </div>
         </div>
 
