feat-media header section

--- a/Airbnb/index.html
+++ b/Airbnb/index.html
@@ -326,7 +326,7 @@
         </div>
 
         <!-- img section -->
-        <div class="img-container">
+        <!-- <div class="img-container">
             <img src="" alt="" class="fav-icon">
             <div class="img-store">
                 <div class="text-store">
@@ -351,7 +351,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
     </div>
