--- a/Azure/index.html
+++ b/Azure/index.html
@@ -12,14 +12,13 @@
 
 <body>
     <div class="all-section">
-        <!-- Head section one -->
+        <!-- Head section-->
         <header class="header-one">
             <div class="mobile">
-
-                <div class="burger-nav-azure">
-                    <div class="burger-nav">
+                <div class="hamburger-nav-azure">
+                    <div class="hamburger-nav">
                         <span>
-                            <img src="/Azure/Asset/image/svgexport-1.svg" alt="burger-nav" width="20px" height="30px">
+                            <img src="/Azure/Asset/image/svgexport-1.svg" alt="hamburger-nav" width="20px" height="30px">
                         </span>
                     </div>
                     <div class="azure">
@@ -49,11 +48,10 @@
             </div>
         </header>
 
-        <!-- Head section two -->
         <header class="header-two">
             <div class="mobile-two">
                 <div class="list">
-                    <div class="burger-nav">
+                    <div class="hamburger-nav">
                         <div class="menu-img">
 
                             <svg aria-hidden="true" role="presentation" data-slug-id="microsoft-square"
@@ -84,7 +82,7 @@
                     <div class="search">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
-                    <div class="burger-nav">
+                    <div class="hamburger-nav">
                         <img src="/Azure/Asset/image/svgexport-4.svg" alt="" width="24.5px">
                     </div>
                     <div class="sign-mobile">
@@ -93,11 +91,10 @@
                 </div>
             </div>
         </header>
-        <!-- Head section three -->
         <header class="header-three">
             <div class="mob-header-three">
                 <div class="list">
-                    <div class="burger-nav">
+                    <div class="hamburger-nav">
                         <div class="menu-img">
 
                             <svg aria-hidden="true" role="presentation" data-slug-id="microsoft-square"
@@ -145,9 +142,8 @@
         <header class="header-four">
             <div class="mob-header-three">
                 <div class="list">
-                    <div class="burger-nav">
+                    <div class="hamburger-nav">
                         <div class="menu-img">
-
                             <svg aria-hidden="true" role="presentation" data-slug-id="microsoft-square"
                                 viewBox="0 0 26 25" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M12.5708 0.981934H0.907471V12.3682H12.5708V0.981934Z" fill="#F25022"></path>
@@ -155,7 +151,6 @@
                                 <path d="M12.5708 13.5649H0.907471V24.9512H12.5708V13.5649Z" fill="#00A4EF"></path>
                                 <path d="M25.4629 13.5649H13.7996V24.9512H25.4629V13.5649Z" fill="#FFB900"></path>
                             </svg>
-
                         </div>
                     </div>
                     <div class="azure">
@@ -193,9 +188,6 @@
             </div>
         </header>
         <main class="main-four">
-            <!-- <div class="img-top">
-        <img src="Asset/image/Desktop hero.avif" alt="">
-    </div> -->
             <div class="top-head">
                 <div class="top-main">
                     <div class="heading-section">
@@ -216,12 +208,6 @@
                 </div>
             </div>
         </main>
-        <section class="alert-msg">
-            <p><a href="#">Azure OpenAI Service is now available. Learn more <i class="fa-solid fa-chevron-right"></i>
-                </a></p>
-        </section>
-
-
         <div class="container">
             <div class="heading-grid">
                 <h2>On-premises, hybrid, multicloud, or at the edge—create secure, future-ready cloud solutions on Azure
@@ -687,7 +673,6 @@
                 </div>
         </footer>
        
- 
         </div>
     </div>
 
