img in progress

--- a/Airbnb/index.html
+++ b/Airbnb/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +7,6 @@
     <title>Airbnb</title>
     <link rel="stylesheet" href="/style.css">
 </head>
-
 <body>
     <div>
         <div class="price-info">
@@ -44,9 +42,6 @@
                     <div class="filter-search">
                         <img src="/img/svgexport-5.svg" alt="">
                     </div>
-
-
-
                 </div>
             </div>
             <header class="logo-nav">
@@ -324,39 +319,47 @@
 
             </div>
         </div>
-
-        <!-- img section -->
-        <!-- <div class="img-container">
-            <img src="" alt="" class="fav-icon">
-            <div class="img-store">
-                <div class="text-store">
-                    <h2>Gildeskal, Norway</h2> <span><img src="" alt=""> 4.92</span>
-                    <h3>36 hectares</h3>
-                    <h3>7-12 Dec</h3>
-                    <div class="price-store">
-                        <span>24,636 <h3>night</h3></span>
-                    </div>
+    </div>
+    <!-- img section -->
+    <div class="row-colmn">
+        <div class="rowColmn-img">
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img1.webp" alt="" width="100%"> 
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>IN, India</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img1.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
                 </div>
             </div>
         </div>
-        <div class="img-container">
-            <img src="" alt="" class="fav-icon">
-            <div class="img-store">
-                <div class="text-store">
-                    <h2>Gildeskal, Norway</h2> <span><img src="" alt=""> 4.42</span>
-                    <h3>36 hectares</h3>
-                    <h3>7-12 Dec</h3>
-                    <div class="price-store">
-                        <span>24,636 <h3>night</h3></span>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
-
     </div>
-
-
 </body>
 
 </html>
+
+
+
+<!-- <div class="radio-btn">
+    <span class="_4o74ccl" style="transform: scale(1);"></span>
+    <span class="_1k9ksvh" style="transform: scale(1);"></span>
+    <span class="_1k9ksvh" style="transform: scale(1);"></span>
+    <span class="_1k9ksvh" style="transform: scale(0.833333);"></span>
+    <span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
+    <span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
+</div> -->
