mobileViewHeader-and progressing

--- a/Airbnb/index.html
+++ b/Airbnb/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Airbnb</title>
     <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
     <div>
         <div class="price-info">
@@ -312,11 +314,9 @@
                                     <span>Filters</span>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
@@ -325,11 +325,25 @@
         <div class="rowColmn-img">
             <div class="section-imgAndtext">
                 <div class="img-section">
-                    <img src="/img/img1.webp" alt="" width="100%"> 
+                    <img src="/img/img1.webp" alt="" width="100%">
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
                     <h4>IN, India</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <div class="price">
+                        <span class="price-tag">₹9,927 <span>night</span></span>
+                    </div>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img2.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
                     <span class="navigation">13 km to Sagarmatha National Park</span>
                     <span class="date">21-26 Feb</span>
                     <span>₹9,927 <span>night</span></span>
@@ -337,7 +351,212 @@
             </div>
             <div class="section-imgAndtext">
                 <div class="img-section">
-                    <img src="/img/img1.webp" alt="" width="100%">
+                    <img src="/img/img3.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img4.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img5.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img6.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img7.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img8.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img9.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img10.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img11.jpg" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img12.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img13.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img14.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img15.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img16.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img17.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img20.webp" alt="" width="100%">
+                   
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img19.webp" alt="" width="100%">
+                </div>
+                <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
+                <div class="img-text">
+                    <h4>Khumjung,Nepal</h4>
+                    <span class="navigation">13 km to Sagarmatha National Park</span>
+                    <span class="date">21-26 Feb</span>
+                    <span>₹9,927 <span>night</span></span>
+                </div>
+            </div>
+            <div class="section-imgAndtext">
+                <div class="img-section">
+                    <img src="/img/img18.webp" alt="" width="100%">
                 </div>
                 <img class="icon-fav" src="/img/svgexport-8.svg" alt="" width="24px">
                 <div class="img-text">
@@ -352,14 +571,3 @@
 </body>
 
 </html>
-
-
-
-<!-- <div class="radio-btn">
-    <span class="_4o74ccl" style="transform: scale(1);"></span>
-    <span class="_1k9ksvh" style="transform: scale(1);"></span>
-    <span class="_1k9ksvh" style="transform: scale(1);"></span>
-    <span class="_1k9ksvh" style="transform: scale(0.833333);"></span>
-    <span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
-    <span class="_1k9ksvh" style="transform: scale(0.666667);"></span>
-</div> -->
