--- a/Airbnb/index.html
+++ b/Airbnb/index.html
@@ -566,8 +566,93 @@
                     <span>₹9,927 <span>night</span></span>
                 </div>
             </div>
+            <div class="under-line"></div>
+            <div class="last-head">
+                Continue exploring tropical homes
+            </div>
+            <div class="last-btn">
+                <button>Show more</button>
+            </div>
         </div>
+        
     </div>
+    <footer>
+        <div class="footer">
+            <h2>Inspiration for future getaways</h2>
+            <div class="btn-container">
+                <div class="ft-button">
+                    <button>Categories</button>
+                    <button>Things to do</button>
+                </div>
+            </div>
+            <div class="list-container">
+                <div class="list-text">
+                    <div class="list-division">
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Amzazing Pools</a>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Artic</a>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Camping</a>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Campervans</a>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Castles</a>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Containers</a>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Countryside</a>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Design</a>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Earth home</a>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Farms</a>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Nation parks</a>
+                            </div>
+                        </div>
+                        <div class="list-item">
+                            <div class="core-text">
+                                <a href="#">Show more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer> 
 </body>
 
 </html>
